# SlicerAnatomyCarve

./: .gitignore  CMakeLists.txt  README.md
AnatomyCarve/: AnatomyCarve.py  CMakeLists.txt
AnatomyCarve/AnatomyCarveLogic/: AnatomyCarveLogic.py  CarvingConfiguration.py  ComputeShader.py  Context.py  Mask.py  Texture.py  __init__.py
AnatomyCarve/Resources/Shaders/: CarveVoxels.comp  CarveVoxelsAA.comp  Dilation.comp  FillColorVolume.comp  Noise.comp  Test.comp
AnatomyCarve/Resources/UI/: AnatomyCarve.ui
VolumeTextureIDHelper/: CMakeLists.txt  qSlicerVolumeTextureIDHelperModule.cxx  qSlicerVolumeTextureIDHelperModule.h  qSlicerVolumeTextureIDHelperModuleWidget.cxx  qSlicerVolumeTextureIDHelperModuleWidget.h
VolumeTextureIDHelper/Logic/: vtkSlicerVolumeTextureIDHelperLogic.cxx  vtkSlicerVolumeTextureIDHelperLogic.h
VolumeTextureIDHelper/Resources/: qSlicerVolumeTextureIDHelperModule.qrc
VolumeTextureIDHelper/Resources/UI/: qSlicerVolumeTextureIDHelperFooBarWidget.ui  qSlicerVolumeTextureIDHelperModuleWidget.ui
VolumeTextureIDHelper/Widgets/: qSlicerVolumeTextureIDHelperFooBarWidget.cxx  qSlicerVolumeTextureIDHelperFooBarWidget.h
data/: Panoramix-cropped.seg.nrrd
